<resources>
    <string name="app_name">Bhakti Sangam</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="package_name">com.bhakti.sangam</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_link">http://play.google.com/store/apps/details?id=com.bhakti.sangam</string>
    <string name="app_share_content">Dear Devotees, In this app you will find All Aarti Audio ,
        Video and Text of all bhagwaan ji( Hindu God) in hindi font. You can share any content to
        your friend on a single click. Bhakti Sangam app. \n Download this at:</string>
    <string name="path">http://162.144.68.182/ambey/Thumbnails/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Error_TimeOut">No Internet Connectivity</string>
    <string name="AuthFailure">Authentication Problem</string>
    <string name="Server_Error">Server not Responding</string>
    <string name="Network">Network Issue Check Your Internet Connectivity</string>
    <string name="Parsing_error">Problem in data Parsing</string>
    <string name="data_not_found">Data Not Available</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="playpouse">image button for play or pause video</string>
    <string name="total_time">00:00</string>
    <string name="next_video">play next video</string>
    <string name="home">Home</string>
    <string name="punchang">Panchang</string>
    <string name="horoscope">Horoscope</string>
    <string name="calendar">Calendar</string>
    <string name="biography">Biography</string>
    <string name="article">Article</string>
    <string name="data">No data available</string>
</resources>
